--- a/templates/gencoui/rndr_repository.html
+++ b/templates/gencoui/rndr_repository.html
@@ -112,7 +112,7 @@
 
 	    		
 
-	    		<div class="container-fluid" style="margin-top:20px;">
+	    		<div class="container-fluid" style="margin-top:70px;">
 
 	    				<!-- <div class="" style="display:inline; margin-left:5%; margin-right: 5%;  margin-bottom:20px;background-color: blue;border-radius: 5px;">
 				            <a class="" href="#">
@@ -120,28 +120,29 @@
 				            </a>
 	    				</div> -->
 
-					    <div style="display:inline; margin-bottom: 15px; ">				    	
-							<img src="{% static 'gencoui/img/rndr/repository.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px"></img>
-					    	<h4 style="display:inline;margin-top: 10px;margin-right:10px">Repositories </h4>
+					    <div style="display:inline; margin-bottom: 50px; ">				    	
+							<img src="{% static 'gencoui/img/rndr/repository.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" height="48px"></img>
+					    	<h4 style="display:inline;margin-top: 10px;margin-right:10px">Metadata </h4>
 							<a class="btn icon-btn btn-default" role="button" data-toggle="modal" data-target="#repository-create-modal" data-placement="bottom" data-tt="tooltip" title="Add Repository" ng-click="new_repository()">
 								<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
 							</a>
 								<!-- <a style="left:250px" class="action-button shadow animate blue" data-toggle="modal" data-target="#repository-add-modal" data-placement="bottom" data-tt="tooltip" title="Add Repository" ng-click="new_repository()"><span class="glyphicon glyphicon-plus" ></span></a> -->
 					    </div>	
 
-							<div id="rndr"></div>
+						<div id="jstree" style="margin-top: 20px;"></div>
 				</div>			
 	    	
 		</div>
 
 		<!--main-->
 		<div id="main">
+
 	    <div style="height: 100%;min-height: 200px; overflow-y: scroll;">
 
 
 	
 	    		{% verbatim %}
-		    	<div class="container-fluid" style="margin-left:5%; margin-right: 5%;  margin-top:20px; margin-bottom:20px; padding-bottom:20px; background-color: white; padding-top: 10px;border-radius: 5px;"
+		    <div class="container-fluid" style="margin-left:5%; margin-right: 5%;  margin-top:20px; margin-bottom:20px; padding-bottom:20px; background-color: white; padding-top: 10px;border-radius: 5px;"
 		    	ng-show="entity_selected.id!=null">
 		    	{% endverbatim %}	
 
@@ -265,12 +266,13 @@
 					</div>
 
 		
-		    	</div>
+		    </div>
 
 
 
 
 	    </div>
+	    <!-- <img src="{% static 'gencoui/img/rndr/metadata.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" height="48px"></img> -->
 		</div>
 
 <div class="modal fade" id="repository-create-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -517,6 +519,59 @@
 				</div>
 				<div style="display:inline">
 					<a class="btn icon-btn btn-default"  ng-click="cancel()" data-placement="bottom"data-tt="tooltip" title="Cancel">
+							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
+					</a>
+				</div>	
+          	</div>
+
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="info-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+
+    <div class="modal-dialog" >
+
+        <div class="modal-content" style="padding: 20px;margin: 20px 0;border-left-width: 20px;border-radius: 3px; border-left-color: #ce4844;">
+	        <div class="modal-header">
+		    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+	        	<h4 class="modal-title">Information</h4>
+		    </div>	     
+          	<div id="imConfirm" class="modal-body">
+          	</div>
+          	<div class="modal-footer">
+				<div style="display:inline">
+					<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Close">
+							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
+					</a>
+				</div>	
+          	</div>
+
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="confirm-delete-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+
+    <div class="modal-dialog">
+
+        <div class="modal-content" style="padding: 20px;margin: 20px 0;border-left-width: 20px;border-radius: 3px; border-left-color: #ffb612;">
+	        <div class="modal-header">
+		    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
+	        	<h4 class="modal-title">Confirm</h4>
+		    </div>	     
+          	<div id="tedmConfirm" class="modal-body">
+
+          	</div>
+          	<div class="modal-footer">
+          		<div style="display:inline">
+	          		<a class="btn icon-btn btn-default" ng-click="confirm_delete()" data-placement="bottom"data-tt="tooltip" title="Save">
+						<span class="glyphicon btn-glyphicon glyphicon-ok img-circle" ></span>					
+					</a>
+				</div>
+				<div style="display:inline">
+					<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Close">
 							<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
 					</a>
 				</div>	
