--- a/templates/gencoui/rndr_builds_search.html
+++ b/templates/gencoui/rndr_builds_search.html
@@ -2,24 +2,20 @@
 
 {% block content %}
 <div class="container-fluid">
-	  	<h2>Builds</h2>	  		  	
-	  	<div class="form-group">		  	
-		 	<div class="input-group">		    
-			    <input type="text" class="form-control">
+	  	  		  	
+	  	<div class="form-group">		
+	  	
+		 	<div class="input-group">
+			    <input type="text" class="form-control" placeholder="Find Builds">
 			    <span class="input-group-btn">
-			      <button class="btn btn-default" type="button"><i class="glyphicon glyphicon-search"></i></button>
+			      <button class="btn btn-default btn-sm" type="button"><i class="glyphicon glyphicon-search"></i></button>
 			    </span>
-		  </div>
+		  	</div>
 		</div>
 
-		<div class="panel panel-default">
-  		<!-- Default panel contents -->
+		<div>
 
-  		<div class="panel-heading">
-  			<!-- <img src="{% static 'gencoui/img/ic_save_24px.svg' %}" alt="Kiwi standing on oval"></i> -->
-  			<i class="glyphicon glyphicon-oil"></i> Repositories
-  		</div>
-			<table class="table table-striped table-hover ">
+			<table class="table table-hover">
 			  <!-- <thead>
 			    <tr>
 			      <th>#</th>
@@ -31,19 +27,13 @@
 			  <tbody>
 			    <tr>
 			      <td>1</td>
-			      <td>Column content</td>
-			      <td>Column content</td>
-			      <td>Column content</td>
-			    </tr>
-			    <tr>
-			      <td>2</td>
-			      <td>Column content</td>
-			      <td>Column content</td>
-			      <td>Column content</td>
+			      <td>c</td>
+			      <td>c</td>
+			      <td>c</td>
 			    </tr>
 		  	  </tbody>
 			</table> 
-			<div style="text-align:center">
+		<!-- 	<div style="text-align:center">
 				<ul class="pagination" >
 				  <li class="disabled"><a href="#">&laquo;</a></li>
 				  <li class="active"><a href="#">1</a></li>
@@ -53,7 +43,7 @@
 				  <li><a href="#">5</a></li>
 				  <li><a href="#">&raquo;</a></li>
 				</ul>
-			</div>	
+			</div> -->	
 		</div>	
 
 </div>
