--- a/static/gencoui/css/rndr-style.css
+++ b/static/gencoui/css/rndr-style.css
@@ -112,8 +112,8 @@
 
 		.btn-glyphicon {
 		    padding:8px;
-		    background:#ffffff;
-		    color:#777;
+		    //background:#ffffff;
+		    //color:#777;
 		    /*margin-right:2px;*/
 		}
 
@@ -124,12 +124,6 @@
     		padding-bottom: 3px;
 		}
 
-
-		.btn-glyphicon-text {
-		    padding:8px;
-		    background:#ffffff;
-		    margin-right:4px;
-		}
 
 		.icon-btn-text {
 		    padding: 1px 15px 3px 2px;
@@ -268,12 +262,20 @@
 		    border-style: solid;
 		    margin-bottom: 10px;
 		    margin-right: 10px;
+		    color:#217dbb;
 		} 
 		.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {
-		    background-color: #217dbb;
+		    color:#217dbb;
+		    background-color: #eee;
 		}
 
 
 		.vakata-context li>a {
     		color: #2c3e50;
     	}	
+
+
+    	a:hover, a:focus {
+		    color: #217dbb; 
+		    text-decoration: underline;
+		}
