--- a/templates/gencoui/rndr_langs.html
+++ b/templates/gencoui/rndr_langs.html
@@ -113,8 +113,9 @@
 
 	    		<div class="container-fluid" style="margin-top:70px;">
 
-				    <div style="margin-bottom: 15px;">				    	
-				    	<h4 style="display:inline;margin-top: 10px;margin-right:10px">Languajes </h4>
+				    <div style="margin-bottom: 15px;">
+				    	<img src="{% static 'gencoui/img/rndr/langs.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px"></img>  	
+				    	<h4 style="display:inline;margin-top: 10px;margin-right:10px">Languages </h4>
 				    	<a class="btn icon-btn btn-default" role="button" data-toggle="modal" data-target="#lang-add-modal" data-placement="bottom" data-tt="tooltip" title="Create Lang" ng-click="new_lang()">
 							<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
 						</a>
