--- a/templates/gencoui/rndr_repository.html
+++ b/templates/gencoui/rndr_repository.html
@@ -121,7 +121,7 @@
 	    				</div> -->
 
 					    <div style="display:inline; margin-bottom: 50px; ">				    	
-							<img src="{% static 'gencoui/img/rndr/repository.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" height="48px"></img>
+							<img src="{% static 'gencoui/img/rndr/repository.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="32px" height="32px"></img>
 					    	<h4 style="display:inline;margin-top: 10px;margin-right:10px">Metadata </h4>
 							<a class="btn icon-btn btn-default" role="button" data-toggle="modal" data-target="#repository-create-modal" data-placement="bottom" data-tt="tooltip" title="Add Repository" ng-click="new_repository()">
 								<span class="glyphicon btn-glyphicon glyphicon-plus img-circle" ></span>					
@@ -216,12 +216,11 @@
 						  	<tbody >
 						  		<tr style="background-color:rgba(220, 228, 236, 0.36);">
 						  			<!-- <td>{{form_add_entitydef.entidad_ref}}</td> -->
-						  			<td>					              
-					                    <select class="form-control" ng-model="GencoEntidadDefinicion.entidad_ref" ng-change="get_pk_fields()">
-					                    {% for x,y in form_add_entitydef.entidad_ref.field.choices %}
-					                        <option value="{{ x }}" >{{ y }}</option>
-					                    {% endfor %}
-					                    </select> 
+						  			<td>
+    									<select class="form-control" ng-model="GencoEntidadDefinicion.entidad_ref" ng-change="get_pk_fields()" 
+    									ng-options="entity.id_entidad as entity.nombre for entity in repoEntities">
+							      				<option value=''>Select</option>
+										</select>
 					                </td>
 					                {% verbatim %}
 								    <td><li ng-repeat="pk in pk_fields | filter: {es_pk: true}">{{pk.nombre}} ({{pk.id_tipodato}})</li></td>
