Se continua con la seleccion de imagenes para env y langs

--- a/templates/gencoui/menu.html
+++ b/templates/gencoui/menu.html
@@ -59,7 +59,7 @@
               <img src="{% static 'gencoui/img/rndr/langs.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" height="48px"></img>
             </a>
         </div>
-        <div class="panel-footer" style="background-color: white; font-size:12px">You can define your knowed languages</div>
+        <div class="panel-footer" style="font-size:12px">You can define your knowed languages</div>
     </div>
   </div>
   <div class="col-md-4">      
@@ -70,7 +70,7 @@
               <img src="{% static 'gencoui/img/rndr/repository.svg' %}" onerror="this.onerror=null; this.src='{% static 'gencoui/img/rndr/noimage.jpg' %}'" width="48px" height="48px"></img>
             </a>          
         </div>
-        <div class="panel-footer" style="background-color: white; font-size:12px">Define your eschema data</div>
+        <div class="panel-footer" style="font-size:12px">Define your eschema data</div>
     </div>    
   </div>
   <div class="col-md-2"></div>
